fixed nav alignment issues

--- a/styles/partials/_nav.scss
+++ b/styles/partials/_nav.scss
@@ -17,7 +17,11 @@
 
   &__logo {
     width: 7.5rem;
-    margin: 1.5rem 0;
+    margin: 1.5rem 0rem 1rem 0rem;
+
+    @include tablet {
+      margin: 1.5rem 0rem 1.5rem 0rem;
+    }
   }
 
   @include tablet {
